# db_excel_sync_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  config.py  database.py  dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py  schemas.py
app/api/v1/endpoints/: clickup.py  health.py  production.py  sync_service_companies.py  ui.py  upload.py  web.py  wellheader.py  wellheader_insert.py
app/core/: config.py  database.py  logger.py  settings.py
app/services/: access_grant_service.py  clickup_chat_service.py  companies.py  excel_processor.py  grafana_service.py  production_processor.py  sync_service_companies_grafana.py  wellheader_loader.py  wellheader_updater.py
app/templates/: _feedback.html  home.html  production_upload.html  upload.html  wellheader_insert.html  wellheader_upload.html
app/utils/: excel_reader.py  file_validation.py
app/validation/: __init__.py  base.py  constants.py  exceptions.py  registry.py  rules.py
scripts/sql/: 001_access_grants.sql
services/: processing_service.py
tests/: conftest.py  test_excel_processor.py  test_excel_reader.py  test_health.py  test_middleware.py  test_production.py  test_ui.py  test_upload.py  test_validation.py  test_wellheader.py  test_wellheader_insert.py
tests/integration/: conftest.py  test_db_writes.py  test_production_writes.py  test_wellheader_insert_writes.py
utils/: excel_reader.py
