[project]
name = "db-excel-sync-api"
version = "1.0.0"
description = "Internal API to sync well configuration and wellheader data from Excel into per-company Postgres databases."
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import sorting, UP pyupgrade, B bugbear.
select = ["E", "W", "F", "I", "UP", "B"]
# E501: long lines are mostly structured log calls; not worth churning.
# B008: FastAPI uses File(...)/Form(...)/Query(...)/Depends(...) in defaults by design.
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
